# sorobai-studio

./: README.md
server/: .gitignore  pyproject.toml  reingest_all.py
server/app/: config.py  db.py  embeddings.py  main.py
server/app/models/: schemas.py
server/app/rag/: chunking.py  ingest.py  prompts.py  query.py  retrieve.py  validators.py
server/data/docs/en/: cli_basic.md  examples_counter.md  examples_token.md  examples_token_antipattern.md  examples_token_contract.md  overview.md  sdk_auth.md  sdk_env.md  sdk_errors.md  sdk_storage.md  sdk_types.md
server/data/docs/es/: cli_basic.md  examples_counter.md  examples_token.md  examples_token_antipattern.md  examples_token_contract.md  overview.md  sdk_auth.md  sdk_env.md  sdk_errors.md  sdk_storage.md  sdk_types.md
sorobai-studio-app/: HANDOFF.md  PRE_PUSH_CHECKLIST.md  VERIFICATION_REPORT.md  package.json  pnpm-lock.yaml  proxy.ts  tailwind.config.ts
sorobai-studio-app/app/: globals.css  layout.tsx  page.tsx
sorobai-studio-app/docs/: ACCESS_CONTROL_AUDIT.md  ACCESS_CONTROL_IMPLEMENTATION.md  ARCHITECTURE.md  AUTH_ARCHITECTURE.md  CHANGELOG.md  DATABASE_SCHEMA.sql  ENV_EXAMPLE.md  IMPLEMENTATION_SUMMARY.md  NAVIGATION_FIX_REPORT.md  NAVIGATION_REDESIGN.md  PRODUCT_DECISIONS_IMPLEMENTATION.md  PROFILE_IMPLEMENTATION.md  ROUTES.md  STELLAR_CONSISTENCY_AUDIT.md  TESTING_GUIDE.md  UI_STRUCTURE.md  WALLET_INTEGRATION.md  WALLET_UX_IMPROVEMENTS.md
sorobai-studio-app/hooks/: use-wallet.ts
sorobai-studio-app/lib/: mock-data.ts
sorobai-studio-app/types/: index.ts  wallet-auth.ts
(+55 files in other folders)
